# easy_list

./: .gitignore  Cargo.toml  Dockerfile  README.md  Secrets.toml  docker-compose.yml
ansible/: deploy.yml  inventory.ini
src/: error.rs  main.rs  secrets.rs  tg_bot.rs
