[package]
name = "easy_list"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.13.0", features = ["macros"] }
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
thiserror = "1.0.64"
redis = { version = "0.27.3", features = ["async-std-comp", "tokio-comp"] }
serde = { version = "1.0.210", features = ["derive"] }
toml = "0.8.19"